# renewedPDP

./: .gitignore  AA.ARC  ARCE.COM  BP.ARC  CL.ARC  CS.ARC  IA.ARC  IAC.ARC  PA.ARC  README.md  SRC.ARC  TODO.md  UTILS.ARC
aa/: BSB8.PAT  BSB8.STR  DCB.PAT  DFR.PAT  DMA.STR  DMA.TEM  DOG.PAT  DR8.PAT  DR8.STR  DR8.TEM  FOUR.PAT  IMPOSS.PAT  LH8.STR  LH8.TEM  TWO.PAT
bp/: 424.NET  424.PAT  424.STR  424.TEM  CAS.STR  CAS.TEM  REC.NET  REC.PAT  REC.STR  REC.TEM  SEQ.NET  SEQ.PAT  SEQ.STR  SEQ.TEM  XOR.NET  XOR.STR  XOR.TEM  XOR2.TEM
cl/: 16.LOO  16.PAT  16.STR  16.TEM  16WEI.LOO  2JETS.STR  2JETS.TEM  3JETS.STR  3JETS.TEM  AJETS.PAT  GRAPH.LOO  GRAPH.PAT  GRAPH.STR  GRAPH.TEM  GRAPHWEI.LOO  JETS.LOO  JETS.PAT  JETWEI.LOO
cs/: BOLTZ.LOO  BOLTZ.STR  BOLTZ.TEM  BOLTZ.WTS  CUBE.NET  (+18 more)
pythonPDP/: MIGRATION_PLAN.md  MODULE_MAPPING.md  PARITY_CHECKLIST.md  README.md  pyproject.toml
pythonPDP/scripts/: check_all_pythonpdp.sh  parity_iac_c_vs_python.sh  smoke_iac_python.sh  smoke_iac_template_state_python.sh  smoke_iac_test_python.sh
pythonPDP/src/pdp/: __init__.py
pythonPDP/src/pdp/cli/: bp_cli.py  iac_cli.py  pa_cli.py
pythonPDP/src/pdp/io/: __init__.py  bp_network_parser.py  compat.py  network_parser.py  pattern_parser.py  template_parser.py
pythonPDP/src/pdp/models/: bp.py  iac.py  pa.py
pythonPDP/src/pdp/runtime/: command_stream.py
pythonPDP/src/pythonpdp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pythonPDP/tests/: test_bp_model.py  test_iac_model.py  test_iac_network_parser.py  test_pa_model.py  test_pattern_parser.py  test_template_parser.py
(+75 files in other folders)
