[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonpdp"
version = "0.1.0"
description = "Modern Python port workspace for renewedPDP"
requires-python = ">=3.10"

[project.scripts]
pdp-iac = "pdp.cli.iac_cli:main"
pdp-pa = "pdp.cli.pa_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
